<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_logo_content_description">App logo showing ballot box</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="favorite_elections">Bookmarked elections</string>
    <string name="no_elections">No elections found</string>
    <string name="error_refreshing_elections">Unable to update elections data!</string>
    <string name="error_get_representatives">An error occurred while fetching representatives data!</string>
    <string name="error_get_representatives_no_address">Please set address to fetch your representatives!</string>
    <string name="address_not_available">Address not available</string>
    <string name="location_finder_url_not_available">Voting locations not available</string>
    <string name="ballot_info_url_not_available">Ballot information not available</string>
    <string name="follow_election">Follow election</string>
    <string name="unfollow_election">Unfollow election</string>
    <string name="address_title">Address</string>
    <string name="election_information_title">Election Information</string>
    <string name="representative_search_title">Representative Search</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives_title">My Representatives</string>
    <string name="location_permission_rationale">"Please enable location access in order to use your location for address search."</string>
    <string name="location_required_error">Location services must be enabled to use your location</string>
    <string name="location_permission_denied_hint">"Unable to use my location since location access was denied."</string>
    <string name="error_get_election_from_db">An error occurred while loading election data from database!</string>
    <string name="settings">Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="street">Street</string>
    <string name="street_no">Street/No.</string>
    <string name="city">City</string>
    <string name="zip">ZIP</string>
    <string name="no_representatives_available">Start search to list your representatives.</string>
    <string name="no_upcoming_elections_available">No upcoming elections found.</string>
    <string name="no_favorite_elections_available">Follow upcoming elections to see your favorite elections.</string>
    <string name="error_open_link">Unable to open link: no browser found.</string>

</resources>
