<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/representativeFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/medium_padding"
        android:paddingTop="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:paddingBottom="@dimen/default_padding">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_STREET_ADDRESS"
            android:hint="@string/street"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.line1}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_STREET_ADDRESS"
            android:hint="@string/street_no"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.line2}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="..AUTOFILL_HINT_POSTAL_ADDRESS_LOCALITY"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.city}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_REGION"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            app:stateValue="@={viewModel.address.state}" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_CODE"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.address.zip}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/find_my_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/representativeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_representatives_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="@{viewModel.representatives.size() == 0 ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/no_representatives_available"
            android:textAlignment="center"
            android:visibility="@{viewModel.representatives.size() == 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.representatives.size() == 0 ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representativeTitle"
            app:listData="@{viewModel.representatives}"
            tools:listitem="@layout/item_representative" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
