<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/launchFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_padding"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- image for home screen logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ballot_logo_content_description"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@id/upcomingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- button to navigate to upcoming elections -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/upcomingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@id/representativeButton"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- button to navigate to representatives -->
        <Button
            android:id="@+id/representativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
